--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,29 @@
 <!DOCTYPE html>
 <html lang="ro">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nukki Presale</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://unpkg.com/@tonconnect/ui@latest" defer></script>
-  <script src="app.js" defer></script>
-</head>
-<body>
-  <header>
-    <div id="wallet-status">🔴 Neconectat</div>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nukki Presale</title>
+    <link rel="stylesheet" href="style.css" />
 
-  <main class="container">
-    <h1>🐾 Presale Nukki Packs</h1>
+    <!-- Corect: trebuie să fie bundle, nu ui@latest -->
+    <script src="https://unpkg.com/@tonconnect/ui@2.0.7/dist/tonconnect-ui.min.js"></script>
 
-    <div id="packs">
-      <div class="pack" data-pack="starter">
-        <h3>Starter Pack</h3>
-        <p>🎁 2 TON • 3000 buc • 90% Common / 10% Epic</p>
-        <button class="buy-btn">Cumpără</button>
-      </div>
+    <!-- Conectăm logica aplicației -->
+    <script src="app.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
+      <h1>🔥 Nukki Presale 🔥</h1>
 
-      <div class="pack" data-pack="epic">
-        <h3>Epic Pack</h3>
-        <p>💎 15 TON • 1500 buc • 40% Legendary / 40% Epic / 20% Rare</p>
-        <button class="buy-btn">Cumpără</button>
-      </div>
+      <button id="connect-wallet">Conectează Wallet</button>
+      <p id="wallet-status">Neconectat ❌</p>
 
-      <div class="pack" data-pack="mythic">
-        <h3>Mythic Pack</h3>
-        <p>🔥 50 TON • 500 buc • 76% Mythic / 24% Legendary</p>
-        <button class="buy-btn">Cumpără</button>
+      <div class="packs">
+        <button class="buy-pack" data-pack="starter">Cumpără Starter Pack</button>
+        <button class="buy-pack" data-pack="epic">Cumpără Epic Pack</button>
+        <button class="buy-pack" data-pack="mythic">Cumpără Mythic Pack</button>
       </div>
     </div>
-
-    <div id="result"></div>
-  </main>
-</body>
+  </body>
 </html>
